# FastApi-template

./: .env.example  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/: api.py
app/api/dependencies/: authentication.py
app/api/routes/: api.py  info.py
app/api/routes/auth/: authentication.py
app/core/: config.py  events.py  exceptions.py
app/db/mongo/: databases.py  events.py
app/db/postgress/: events.py
app/db/postgress/migrations/: env.py
app/db/postgress/migrations/versions/: fdf8821871d7_main_tables.py
app/db/postgress/queries/: queries.pyi
app/db/postgress/repositories/: articles.py
app/models/: common.py  geolocation.py  wether.py
app/models/schemas/: jwt.py  rwschema.py
app/models/schemas/auth/: auth.py
app/resources/: strings.py
app/services/: geolocation.py  jwt.py  wetaher_api.py
scripts/: lint  styles.yml
tests/: __init__.py  conftest.py
